fixed blurry map data overlay in mapeditor in chrome

--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,7 @@ button, input[type="file"] {
 				top: 0;
 				left: 0;
 				image-rendering: crisp-edges;
+				image-rendering: pixelated;
 				opacity: 0.5;
 			}
 		}
